Part4_Kubernetes/Chapter02/Ch02_06-terraformer-eks/terraform-codes/vpc.tf
resource "aws_vpc" "tfer--vpc-0e13893bba99525f9" {
  assign_generated_ipv6_cidr_block     = "false"
  cidr_block                           = "172.31.0.0/16"
  enable_dns_hostnames                 = "true"
  enable_dns_support                   = "true"
  enable_network_address_usage_metrics = "false"
  instance_tenancy                     = "default"
  # ipv6_netmask_length                  = "0"

  tags = {
    Name = "vpc"
  }

  tags_all = {
    Name = "vpc"
  }
}
